Fixes #28, the display of main page courses on ie11

--- a/src/sass/modules/_course.scss
+++ b/src/sass/modules/_course.scss
@@ -3,6 +3,7 @@
     position: relative;
 
     // box model
+    width: 100%;
     max-width: 320px;
     margin: 0 auto;
     margin-bottom: 20px;
